--- a/themes/coil/source/css/_partial/typography.styl
+++ b/themes/coil/source/css/_partial/typography.styl
@@ -52,3 +52,19 @@
   font-family font-l
   letter-spacing 3px
   font-size 1.8rem
+
+h1
+  font-size: 3em
+  margin-bottom: 15px
+
+h2 
+  font-size: 2.5em
+  margin-bottom: 15px
+    
+h3 
+  font-size: 2em
+  margin-bottom: 15px
+  
+h4
+  font-size: 1.5em
+  margin-bottom: 15px
