updated nav on zine pages

--- a/themes/coil/source/css/_variables.styl
+++ b/themes/coil/source/css/_variables.styl
@@ -25,6 +25,8 @@ color-aldo-accent = #1b4753
 // Theme Colors
 color-main = color-aldo
 color-main-accent = color-aldo-accent
+color-light = color-white
+color-light-inverse = color-aldo-accent
 
 // Media queries
 mq-mobile = "screen and (max-width: 768px)"
