--- a/themes/coil/source/css/_partial/theme.styl
+++ b/themes/coil/source/css/_partial/theme.styl
@@ -5,8 +5,21 @@
     color color-main-accent
   a.navbar-item:hover, a.navbar-link:hover
     background-color rgba(0, 51, 51, 0.32)
-    color #133433
+    color color-aldo-accent
     
 .is-coil-theme-inverse
   background-color color-main-accent
   color color-main
+  
+.is-light-theme
+  background-color color-light
+  color color-light-inverse
+  .navbar-item
+    color color-main-accent
+  a.navbar-item:hover, a.navbar-link:hover
+    background-color rgba(0, 51, 51, 0.32)
+    color color-main-accent
+    
+.is-light-theme-inverse
+  background-color color-light-inverse
+  color color-light  
