--- a/themes/coil/source/css/_partial/typography.styl
+++ b/themes/coil/source/css/_partial/typography.styl
@@ -53,18 +53,17 @@
   letter-spacing 3px
   font-size 1.8rem
 
-h1
-  font-size: 3em
+h1, h2, h3, h4, h5, h6
   margin-bottom: 15px
+
+h1  
+  font-size: 3em
 
 h2 
   font-size: 2.5em
-  margin-bottom: 15px
     
 h3 
   font-size: 2em
-  margin-bottom: 15px
   
 h4
   font-size: 1.5em
-  margin-bottom: 15px
