--- a/themes/coil/source/css/_partial/base.styl
+++ b/themes/coil/source/css/_partial/base.styl
@@ -19,3 +19,11 @@ a, .title, .subtitle
 
 .banner img
   width: 100%
+
+  
+.zine-pagination a
+  opacity: 0.7	
+  &:hover
+    opacity: 1.0  	
+  	
+	  
