updated zines partials, styled navbar

--- a/themes/coil/source/css/_partial/theme.styl
+++ b/themes/coil/source/css/_partial/theme.styl
@@ -6,6 +6,8 @@
   a.navbar-item:hover, a.navbar-link:hover
     background-color rgba(0, 51, 51, 0.32)
     color color-aldo-accent
+  #lang-select-label
+  	color: color-main-accent   
     
 .is-coil-theme-inverse
   background-color color-main-accent
@@ -13,13 +15,15 @@
   
 .is-light-theme
   background-color color-light
-  color color-light-inverse
+  color color-light-accent
   .navbar-item
-    color color-main-accent
+    color color-light-accent
   a.navbar-item:hover, a.navbar-link:hover
     background-color rgba(0, 51, 51, 0.32)
-    color color-main-accent
+    color color-light-accent
+  #lang-select-label
+  	color: color-light-accent  
     
 .is-light-theme-inverse
-  background-color color-light-inverse
+  background-color color-light-accent
   color color-light  
