--- a/themes/coil/source/css/_variables.styl
+++ b/themes/coil/source/css/_variables.styl
@@ -26,7 +26,7 @@ color-aldo-accent = #1b4753
 color-main = color-aldo
 color-main-accent = color-aldo-accent
 color-light = color-white
-color-light-inverse = color-aldo-accent
+color-light-accent = color-apple-accent
 
 // Media queries
 mq-mobile = "screen and (max-width: 768px)"
